--- a/gita-fe.html
+++ b/gita-fe.html
@@ -318,7 +318,7 @@
                                     <svg class="arrow w-4 h-4 text-gray-400 transition-transform duration-200" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
                                 </summary>
                                 <div class="mt-2 p-4 bg-white rounded-md border-l-4 border-blue-500 shadow-inner prose max-w-none text-gray-800 leading-7 text-sm sm:text-base">
-                                    ${comm.text.replace(/\n/g, '<br><br>')}
+                                    ${comm.text.replace(/\?/g, ',').replace(/\n/g, '<br><br>')}
                                 </div>
                             </details>
                         `;
